fix: ajustar altura do dropdown de fontes para alinhar com outros elementos

--- a/client/src/components/ReferenceManager.css
+++ b/client/src/components/ReferenceManager.css
@@ -88,6 +88,8 @@
   font-weight: 500;
   min-width: 140px;
   max-width: 140px;
+  height: 42px;
+  box-sizing: border-box;
 }
 
 .reference-source-select:focus {
