--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1410,17 +1410,18 @@
   /* Títulos - estilo de barra */
   .pdf-container h3 {
     font-size: 13px !important;
-    color: white !important;
-    background-color: #808080 !important;
-    padding: 1px 8px !important;
+    color: #000 !important;
+    font-weight: bold !important;
+    background-color: #d3d3d3 !important;
+    padding: 0px 8px !important;
     margin-bottom: 8px !important;
     margin-top: 15px !important;
-    padding-top: 1px !important;
-    padding-bottom: 1px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
     page-break-after: avoid;
     border: none !important;
     border-radius: 0 !important;
-    line-height: 1.3 !important;
+    line-height: 1.4 !important;
   }
   
   /* Seção de Professores - evitar quebra de página antes e reduzir espaçamento */
