--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1392,15 +1392,6 @@
   @page {
     size: A4;
     margin: 25mm 20mm 20mm 20mm;
-    @top-right {
-      content: '';
-      background-image: url('/FGV LOGO NOVO.png');
-      background-repeat: no-repeat;
-      background-position: right top;
-      background-size: auto 40px;
-      height: 50px;
-      width: 100%;
-    }
   }
   
   /* Primeira página - reduzir margem superior para caber mais conteúdo */
@@ -1423,6 +1414,8 @@
     z-index: 1000;
     pointer-events: none;
     page-break-inside: avoid;
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
   }
   
   /* Container do PDF */
@@ -1431,7 +1424,6 @@
     margin: 0 !important;
     width: 100% !important;
     max-width: 100% !important;
-    padding-top: 60px !important;
   }
   
   /* Títulos - estilo de barra */
