--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1407,7 +1407,7 @@
     right: 0;
     width: 200px;
     height: 55px;
-    background-image: url('/FGV LOGO NOVO.png');
+    background-image: url('%PUBLIC_URL%/FGV LOGO NOVO.png');
     background-repeat: no-repeat;
     background-position: right top;
     background-size: auto 55px;
