--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1482,6 +1482,7 @@
     border: none !important;
     background-color: transparent !important;
     background: none !important;
+    border-collapse: collapse !important;
   }
   
   .pdf-container > div:first-child table td,
@@ -1491,6 +1492,7 @@
     background-color: transparent !important;
     background: none !important;
     border-color: transparent !important;
+    border-width: 0 !important;
   }
   
   .pdf-container > div:first-child table td:first-child,
@@ -1499,6 +1501,15 @@
     border-right: none !important;
     border-top: none !important;
     border-bottom: none !important;
+    border-width: 0 !important;
+  }
+  
+  /* Forçar remoção de todas as bordas visíveis */
+  .pdf-container > div:first-child table * {
+    border: none !important;
+    border-width: 0 !important;
+    border-style: none !important;
+    border-color: transparent !important;
   }
   
   /* Garantir que células da tabela de Informações Gerais não tenham cores */
