--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1434,7 +1434,7 @@
     .pdf-logo-fixed {
       display: block !important;
       position: fixed !important;
-      top: 5mm !important;
+      top: 0 !important;
       left: 0 !important;
       width: auto !important;
       height: 55px !important;
@@ -1450,14 +1450,20 @@
       position: relative !important;
     }
     
-    /* Adicionar padding superior apenas na primeira seção para evitar sobreposição */
+    /* Adicionar padding superior mínimo apenas na primeira seção para evitar sobreposição */
     .pdf-container > div:first-child {
       padding-top: 60px !important;
+      margin-top: 0 !important;
     }
     
     .pdf-container > * {
       position: relative !important;
       z-index: 1 !important;
+    }
+    
+    /* Garantir que o logo apareça em todas as páginas */
+    @page {
+      margin-top: 0;
     }
   }
   
